[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsb-tool"
version = "2.1.0"
description = "Embed and extract files hidden inside PNG images using N-bit LSB steganography."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["steganography", "lsb", "png", "embed", "security"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "Pillow>=8.0",
    "numpy>=1.20",
]

[project.scripts]
lsb-tool = "lsb_tool.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lsb_tool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
